--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,50 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.container {
+  overflow: hidden;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  @media screen and (min-width: 480px) {
+    margin-left: auto;
+    margin-right: auto;
+    width: 480px;
+  }  
+}
+@media screen and (min-width: 768px) {
+  .container{
+    width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container{
+    width: 1280px;
+    padding-left: 38px;
+    padding-right: 38px;
+  }
+}
+.link {
+  text-decoration: none;
+}
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
